removing api key

--- a/Paraphrasing-task-experimentation.ipynb
+++ b/Paraphrasing-task-experimentation.ipynb
@@ -1,38 +1,18 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "#ChatGPT on T5 base"
-      ],
       "metadata": {
         "id": "FWOhvtnodopf"
-      }
+      },
+      "source": [
+        "#ChatGPT on T5 base"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install transformers\n",
-        "!pip install sentencepiece\n",
-        "\n",
-        "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -40,11 +20,10 @@
         "id": "LgbDXjksIm2r",
         "outputId": "b1e5858e-79f3-442c-de24-97619594b5a7"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: transformers in /usr/local/lib/python3.10/dist-packages (4.30.2)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from transformers) (3.12.2)\n",
@@ -66,6 +45,12 @@
             "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.10/dist-packages (0.1.99)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install transformers\n",
+        "!pip install sentencepiece\n",
+        "\n",
+        "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM"
       ]
     },
     {
@@ -115,31 +100,27 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "text = 'Curiosity can help you fuel your natural enthusiasm to explore and discover, stay open, and follow your passion. Staying curious is important for becoming and staying creative. Good news - it can be practiced!'"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "x1NzijqTIwuz"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "text = 'Curiosity can help you fuel your natural enthusiasm to explore and discover, stay open, and follow your passion. Staying curious is important for becoming and staying creative. Good news - it can be practiced!'"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "paraphrase(text)"
-      ],
+      "execution_count": 4,
       "metadata": {
-        "id": "f4e29olNcRIb",
-        "outputId": "0adb405d-3bcd-4e06-81be-2474d1efa1d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f4e29olNcRIb",
+        "outputId": "0adb405d-3bcd-4e06-81be-2474d1efa1d0"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[\"Being curious can help you tap into your natural talent of discovering and exploring, remain open, and pursue your passion. Staying curious is key to becoming and staying creative. Don't worry - there's hope!\",\n",
@@ -149,22 +130,32 @@
               " \"Keeping open to new things can encourage curiosity and exploring your natural instincts. It's essential to remain curious about the world while striving for creativity. There're good reasons to stay that way!\"]"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 4
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "paraphrase(text)"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "#Pegasus"
-      ],
       "metadata": {
         "id": "KveZ2wDFdl4p"
-      }
+      },
+      "source": [
+        "#Pegasus"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "id": "-1jE_3dqepRl"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "from transformers import PegasusForConditionalGeneration, PegasusTokenizer\n",
@@ -178,33 +169,20 @@
         "  translated = model.generate(**batch,max_length=200,num_beams=num_beams, num_return_sequences=num_return_sequences, temperature=1.5)\n",
         "  tgt_text = tokenizer.batch_decode(translated, skip_special_tokens=True)\n",
         "  return tgt_text"
-      ],
-      "metadata": {
-        "id": "-1jE_3dqepRl"
-      },
-      "execution_count": 15,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "num_beams = 10\n",
-        "num_return_sequences = 10\n",
-        "context = \"Curiosity can help you fuel your natural enthusiasm to explore and discover, stay open, and follow your passion. Staying curious is important for becoming and staying creative. Good news - it can be practiced!\"\n",
-        "# text = ''\n",
-        "get_response(context,num_return_sequences,num_beams)\n"
-      ],
+      "execution_count": 16,
       "metadata": {
-        "id": "S1brjhN6eujE",
-        "outputId": "041276f6-6474-46e4-8602-b261f4f8f988",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S1brjhN6eujE",
+        "outputId": "041276f6-6474-46e4-8602-b261f4f8f988"
       },
-      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['Staying curious can help fuel your enthusiasm to explore and discover.',\n",
@@ -219,27 +197,31 @@
               " \"It's important to stay open and curious in order to stay creative.\"]"
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 16
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "num_beams = 10\n",
+        "num_return_sequences = 10\n",
+        "context = \"Curiosity can help you fuel your natural enthusiasm to explore and discover, stay open, and follow your passion. Staying curious is important for becoming and staying creative. Good news - it can be practiced!\"\n",
+        "# text = ''\n",
+        "get_response(context,num_return_sequences,num_beams)\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "get_response(text, num_return_sequences, num_beams)\n"
-      ],
+      "execution_count": 11,
       "metadata": {
-        "id": "vzvNGFU-fp34",
-        "outputId": "a88c3e2a-a13f-4b34-aadc-9c6a0810fd08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vzvNGFU-fp34",
+        "outputId": "a88c3e2a-a13f-4b34-aadc-9c6a0810fd08"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['Good news - it can be practiced!',\n",
@@ -254,46 +236,49 @@
               " 'Good news - it can be done.']"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "get_response(text, num_return_sequences, num_beams)\n"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "#T5 for paraphrasing"
-      ],
       "metadata": {
         "id": "Tfh9G-Lzgm3h"
-      }
+      },
+      "source": [
+        "#T5 for paraphrasing"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "#ChatGPT with a paraphrasing prompt\n"
-      ],
       "metadata": {
         "id": "vJ7jsNC1shGo"
-      }
+      },
+      "source": [
+        "#ChatGPT with a paraphrasing prompt\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install openai"
-      ],
+      "execution_count": 1,
       "metadata": {
-        "id": "Jo4Tg-nml3Vn",
-        "outputId": "6ce25104-ed40-432f-cad3-07a116820947",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jo4Tg-nml3Vn",
+        "outputId": "6ce25104-ed40-432f-cad3-07a116820947"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting openai\n",
             "  Downloading openai-0.27.8-py3-none-any.whl (73 kB)\n",
@@ -315,61 +300,25 @@
             "Successfully installed openai-0.27.8\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install openai"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import openai\n",
-        "import torch\n",
-        "\n",
-        "openai.api_key = \"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\"\n",
-        "\n",
-        "prompts = [\"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Curiosity can help you fuel your natural enthusiasm, openness to new domains and interest in pursuing them. Staying curious is important for creativity, and you can also practice it!\",\n",
-        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: I have several exercises for practicing curiosity for you. Select the one you would like to try.\",\n",
-        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Congratulations, practicing curiosity will make you more inclined towards creativity!\",\n",
-        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Would you like to try another exercise for practicing curiosity?\",\n",
-        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Humor encourages a playful mindset, fosters unconventional thinking, and creates a relaxed atmosphere where innovative ideas can flourish. The following exercises are primarily based on the Incongruity Theory - we laugh when something non-serious violates our common belief, e.g., in punchline of a joke  (Aristotle, Kant, Schopenhauer).\",\n",
-        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: See below for several humour exercises. Choose one!\",\n",
-        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Good job! Becoming more humorous will help you become creative!\",\n",
-        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Would you like to try another exercise in the Humour category?\"\n",
-        "]\n",
-        "\n",
-        "count = 0\n",
-        "for prompt in prompts:\n",
-        "  count += 1\n",
-        "\n",
-        "  # generate response using chat gpt\n",
-        "  response = openai.Completion.create(\n",
-        "            engine='text-davinci-003',\n",
-        "            prompt=prompt,\n",
-        "            temperature=0.7,\n",
-        "            max_tokens=1500,\n",
-        "            n=1,\n",
-        "            stop=None)\n",
-        "\n",
-        "  # take the message\n",
-        "  message = response.choices[0].text.strip()\n",
-        "  print(message)\n",
-        "\n",
-        "  # Opening a CSV file in write mode\n",
-        "  with open('output'+str(count) +'.txt','w') as file:\n",
-        "    # Using csv.writer to write the list to the CSV file\n",
-        "    writer = file.write(message)\n",
-        "    file.close()\n"
-      ],
+      "execution_count": 2,
       "metadata": {
-        "id": "LJ3510NVgFEb",
-        "outputId": "0b338ffd-fd1a-41f4-ed68-2d3715b5a34e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LJ3510NVgFEb",
+        "outputId": "0b338ffd-fd1a-41f4-ed68-2d3715b5a34e"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1. Stirring up your curiosity can kindle your natural eagerness, willingness to explore different areas and fascination in exploring them.\n",
             "2. Being inquisitive is essential for inventiveness, and you can also cultivate it!\n",
@@ -510,39 +459,95 @@
             "15. Fancy attempting a Humour exercise?\n"
           ]
         }
+      ],
+      "source": [
+        "import openai\n",
+        "import torch\n",
+        "\n",
+        "# INSERT API KEY HERE\n",
+        "# openai.api_key = \"\"\n",
+        "\n",
+        "prompts = [\"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Curiosity can help you fuel your natural enthusiasm, openness to new domains and interest in pursuing them. Staying curious is important for creativity, and you can also practice it!\",\n",
+        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: I have several exercises for practicing curiosity for you. Select the one you would like to try.\",\n",
+        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Congratulations, practicing curiosity will make you more inclined towards creativity!\",\n",
+        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Would you like to try another exercise for practicing curiosity?\",\n",
+        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Humor encourages a playful mindset, fosters unconventional thinking, and creates a relaxed atmosphere where innovative ideas can flourish. The following exercises are primarily based on the Incongruity Theory - we laugh when something non-serious violates our common belief, e.g., in punchline of a joke  (Aristotle, Kant, Schopenhauer).\",\n",
+        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: See below for several humour exercises. Choose one!\",\n",
+        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Good job! Becoming more humorous will help you become creative!\",\n",
+        "           \"Provide 15 alternative sentences that are not too formal rewritings of the following paragraph: Would you like to try another exercise in the Humour category?\"\n",
+        "]\n",
+        "\n",
+        "count = 0\n",
+        "for prompt in prompts:\n",
+        "  count += 1\n",
+        "\n",
+        "  # generate response using chat gpt\n",
+        "  response = openai.Completion.create(\n",
+        "            engine='text-davinci-003',\n",
+        "            prompt=prompt,\n",
+        "            temperature=0.7,\n",
+        "            max_tokens=1500,\n",
+        "            n=1,\n",
+        "            stop=None)\n",
+        "\n",
+        "  # take the message\n",
+        "  message = response.choices[0].text.strip()\n",
+        "  print(message)\n",
+        "\n",
+        "  # Opening a CSV file in write mode\n",
+        "  with open('output'+str(count) +'.txt','w') as file:\n",
+        "    # Using csv.writer to write the list to the CSV file\n",
+        "    writer = file.write(message)\n",
+        "    file.close()\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(type(message))"
-      ],
+      "execution_count": 24,
       "metadata": {
-        "id": "rg4yo8T3l1vS",
-        "outputId": "7e94cfb1-44fa-48a0-d3a7-43da1289e574",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rg4yo8T3l1vS",
+        "outputId": "7e94cfb1-44fa-48a0-d3a7-43da1289e574"
       },
-      "execution_count": 24,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "<class 'str'>\n"
           ]
         }
+      ],
+      "source": [
+        "print(type(message))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "NZfiMGzxntzo"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
